compiler/tests/golden/scenarios/transitive_distance.txt
warning[unused_import]: ontology prefix `drugbank` is declared but never used
error: type mismatch: expected `ChEBIDrug` (chebi:drug), found `RxNormDrug` (rxnorm:clinical_drug): no alignment found between chebi:drug and rxnorm:clinical_drug (different ontologies require explicit align declaration)
  --> /tmp/sounio_test_XXXX/coercion_chain.dm:17:13
   |
 17 |     process(rx);  // Should show transitive distance
   |              ^

Error:   × Type errors:
  │ type mismatch: expected `ChEBIDrug` (chebi:drug), found `RxNormDrug`
  │ (rxnorm:clinical_drug): no alignment found between chebi:drug and
  │ rxnorm:clinical_drug (different ontologies require explicit align
  │ declaration)